US 2.3 Mettre à jour  les informations du client
